--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
-python: 2.7
-        3.3
-        3.4
+python:
+        - 2.7
+        - 3.3
+        - 3.4
+script: py.test
+notifications:
+        email: false
