--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+sudo: false
 language: python
 python:
         - 2.7
         - 3.3
         - 3.4
+install:
+        - if [[ $TRAVIS_PYTHON_VERSION != 3.4 ]]; then pip install -r requirements-2.7.txt; fi
+        - pip install -r requirements.txt
+        - pip install -r requirements-test.txt
 script: py.test
 notifications:
         email: false
