Refine the regions API and implementations.
Simplified MatrixRegion.
Migrate keyspaces to the newer region style.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, pep8
+envlist = py27, py33, py34, pep8
 
 [testenv]
 deps =
@@ -8,6 +8,12 @@ deps =
 commands = py.test
 
 [testenv:py27]
+deps =
+    -rrequirements.txt
+    -rrequirements-2.7.txt
+    -rrequirements-test.txt
+
+[testenv:py33]
 deps =
     -rrequirements.txt
     -rrequirements-2.7.txt
