--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
         - if [[ $TRAVIS_PYTHON_VERSION != 3.4 ]]; then pip install -r requirements-2.7.txt; fi
         - pip install -r requirements.txt
         - pip install -r requirements-test.txt
-script: py.test
+script: py.test rig
 notifications:
         email: false
