--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py27, py33, py34, pep8
 deps =
     -rrequirements.txt
     -rrequirements-test.txt
-commands = py.test
+commands = py.test rig {posargs}
 
 [testenv:py27]
 deps =
