--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 before_script:
         - spinnaker_proxy.py -qct cspc276.cs.man.ac.uk &
         - export SPINNAKER_PROXY_PID=$!
-script: py.test rig docs --spinn5 --spinnaker localhost 8 8 --bmp spinn-4c.cs.man.ac.uk --cov rig
+script: py.test rig docs --spinn5 --spinnaker localhost 8 8 --bmp spinn-4c.cs.man.ac.uk --cov rig --durations=10
 after_success:
         - coveralls
 after_script:
