Add type cast documentation.
 - Also fixes an embarrassing bug in fix->float conversions.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ envlist = py27, py33, py34, pep8
 deps =
     -rrequirements.txt
     -rrequirements-test.txt
-commands = py.test rig docs/ {posargs}
+commands =
+	py.test rig {posargs}
+	py.test docs/
 
 [testenv:py27]
 deps =
