--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ install:
 before_script:
         - spinnaker_proxy.py -qct cspc276.cs.man.ac.uk &
         - export SPINNAKER_PROXY_PID=$!
-script: py.test rig docs --spinn5 --spinnaker localhost 8 8 --bmp spinn-4c.cs.man.ac.uk --cov rig --durations=10
+script:
+        - py.test rig docs --spinn5 --spinnaker localhost 8 8 --bmp spinn-4c.cs.man.ac.uk --cov rig --durations=10
+        - flake8 rig
 after_success:
         - coveralls
 after_script:
@@ -22,3 +24,6 @@ after_script:
         - kill -9 $SPINNAKER_PROXY_PID
 notifications:
         email: false
+
+matrix:
+    fast_finish: true
