Make test-suite catch packaging errors.
This commit applies some relatively major file-tree restructuring to enable
pytest to run tests against an installed version of the Rig library. As a result
of this installation becomes a necessary step in testing and thus a bad
setup.py can cause tests to fail.

* Remove __init__.py from test directories.

  As per py.test's recommendations (and previously brought up in #96).

  This is the first step towards making the test suite run against an
  *installed* version of the software rather than the copy in which the test
  code runs. As a bonus, the test code nolonger gets included in the packaged
  software.

* Move tests into own directory.

  This makes the test suite run against the installed version rather than the
  version they happen to be sitting in the same module as.

* Make travis and tox install rig prior to testing.

  This tests the setup is actually working.

* Run py.test in multiple stages to work-around pytest path issues

  In order to cope with pytest's modification of the python module path, the
  test suite and doctests must be run separately for system-wide installations
  of the library-under-test...

  Additionally, the test-dependencies have been removed from setup.py since
  there is no value to them being there.

* Points test suite coverage checks at the installed version of rig

  This process is somewhat ugly but it does work and considering this allows the
  packaging to be tested too, this seems like a good thing overall.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
         - 3.3
         - 3.4
 install:
-        - if [[ $TRAVIS_PYTHON_VERSION != 3.4 ]]; then pip install -r requirements-2.7.txt; fi
-        - pip install -r requirements.txt
+        - python setup.py install
         - pip install -r requirements-test.txt
         - pip install python-coveralls
         - pip install spinnaker_proxy
@@ -14,7 +13,22 @@ before_script:
         - spinnaker_proxy.py -qct cspc276.cs.man.ac.uk &
         - export SPINNAKER_PROXY_PID=$!
 script:
-        - py.test rig docs --spinn5 --spinnaker localhost 8 8 --bmp spinn-4c.cs.man.ac.uk --cov rig --durations=10
+        # Run the main test suite against real hardware and against the
+        # installed codebase. Note: since we're testing an installed version,
+        # the code coverage must be checked against this version, not the one in
+        # './rig/'.
+        - >
+            py.test tests/ \
+                    --spinnaker localhost 8 8 --spinn5 \
+                    --bmp spinn-4c.cs.man.ac.uk \
+                    --cov "$(./utils/rig_path.py)" \
+                    --cov tests \
+                    --durations=10
+        # Run doctests in code
+        - py.test rig/
+        # Run doctests in documentation
+        - py.test docs/
+        # Code quality check
         - flake8 rig
 after_success:
         - coveralls
