WORKAROUND: Only run doctests with py.test when really necessary.
This is a py.test/Python 3.5 bug workaround which can hopefully be reverted at
some point in the not too distant future.

Due to some unfortunate interaction between py.test and Python 3.5, running

    py.test tests --doctest-modules --doctest-glob='*_doctest.rst'

gets into some sort of CPU killing death spin. This was previously done by
default by pytest.ini but has been removed in this commit to (at least
temporarily) reverse this pain-point.

Notably, adding the same arguments when actually attempting to run to
documentation tests and module doctests (e.g.  py.test rig ... and py.test docs
...) does not cause a problem. As a result, these options have simply been
added in the cases where they're actually required in the tox and travis
scripts as well as the developer docs.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, pep8
+envlist = py27, py34, py35, pep8
 
 [testenv]
 deps =
@@ -15,9 +15,9 @@ commands =
     # Run the main test suite against real hardware
     py.test tests/ {posargs}
     # Run doctests in code
-    py.test rig/
+    py.test rig/ --doctest-modules
     # Run doctests in documentation
-    py.test docs/
+    py.test docs/ --doctest-glob='*_doctest.rst'
     # Uninstall the package ready for the next test run
     pip uninstall -y rig
 
