--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ script:
                     --cov tests \
                     --durations=10
         # Run doctests in code
-        - py.test rig/
+        - py.test rig/ --doctest-modules
         # Run doctests in documentation
-        - py.test docs/
+        - py.test docs/ --doctest-glob='*_doctest.rst'
         # Code quality check
-        - flake8 rig
+        - flake8 rig tests
 after_success:
         - coveralls
 after_script:
