--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
         - 3.4
         - 3.5
 install:
-        - python setup.py install
+        - pip install .[c_sa]
         - pip install -r requirements-test.txt
         - pip install python-coveralls
         - pip install spinnaker_proxy
