Move away from 'extra_requirements' feature.
This feature is rather half baked in pip. Instead the documentation just
instructs users to directly install rig_c_sa.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
         - 3.4
         - 3.5
 install:
-        - pip install .[c_sa]
+        - python setup.py install
+        - pip install rig_c_sa
         - pip install -r requirements-test.txt
         - pip install python-coveralls
         - pip install spinnaker_proxy
