--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,9 @@ commands =
     # runs. When making changes to the Rig package dependencies, users should
     # ensure they reset this virtualenv to ensure that no dependencies are
     # omitted.
-    pip install .[c_sa]
+    python setup.py install
+    # Install the C SA kernel (requires a working compiler and libffi)
+    pip install rig_c_sa
     # Run the main test suite against real hardware
     py.test tests/ {posargs}
     # Run doctests in code
