--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands =
     # omitted.
     python setup.py install
     # Install the C SA kernel (requires a working compiler and libffi)
-    pip install rig_c_sa
+    pip install  "rig_c_sa>=0.3.0"
     # Run the main test suite against real hardware
     py.test tests/ {posargs}
     # Run doctests in code
