Port to SpiNNaker Tools v2.0.0
This commit migrates over to a release-candidate of SpiNNaker Tools 2.0.0 which
includes and new SC&MP which notably no longer needs to know the size of the
machine when booting nor requires that chip (0, 0) exist at all.

**NOTE** This commit includes an unofficial SpiNNaker Tools release candidate
version of SC&MP, sark.struct and test application binary. These should be
rebuilt using the officially released SpiNNaker Tools package before final
release of these changes to Rig.

Changes:

* Boot-related changes:
  - MachineController.boot() may be called without arguments (giving a width
    and height result in a deprecation warning and the values being ignored.
  - The boot() function, by default, waits for the machine to report that it is
    completely booted before returning.
  - The boot functions now accept filenames for the boot and struct files.
  - Additional kwargs to boot functions now override values in the SV struct.
  - As a result, the custom arguments for setting the hardware version and LEDs
    (etc.) have been removed in favour of directly specifying the SV values. I
    am not aware of these actually being used anywhere.
  - The rig-boot command no longer takes any arguments indicating the size of
    the machine. Calling it with a width or height is now an error.
  - Associated documentation has been updated.

* Other machine-control changes:
  - Both new- and old-format version formats is understood by
    get_software_version for SpiNNaker and BMPs alike.
  - Version numbers are now reported as tuples (major, minor, patch) rather
    than floats. (A breaking change)
  - System-wide commands (e.g. signalling etc.) are now sent to chip (255,
    255), an alias for the 'root chip' used to boot the machine rather than (0,
    0) which may not exist.
  - A new 'root_chip' attribute will report the (x, y) coordinate of the chip
    used to boot the machine. This is useful for certain geometry functions
    (e.g. disc

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
         # './rig/'.
         - >
             py.test tests/ \
-                    --spinnaker localhost 8 8 --spinn5 \
+                    --spinnaker localhost --spinn5 \
                     --bmp spinn-4c.cs.man.ac.uk \
                     --cov "$(./utils/rig_path.py)" \
                     --cov tests \
