Change codecov config format due to breaking change in format (again!)
- The patch status option and ignore files options are now in 'coverage' not
  'codecov'.
- The 'comment' option is now at the top level.

What on earth are these guys doing?!

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
-codecov:
+coverage:
   ignore:
-  - rig/place_and_route/place/sa/kernel.py
+    - rig/place_and_route/place/sa/kernel.py
   status:
     patch: false
-  comment: false
+comment: false
