Suppress warnings from doctests
Suppresses warnings resulting from code executed as part of a doctest,
otherwise these warnings will result in test failures. (An alternative
solution would be to figure out how to capture the warnings elegantly
within the doctest.)

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
                     --cov tests \
                     --durations=10
         # Run doctests in code
-        - py.test rig/ --doctest-modules
+        - py.test rig/ --doctest-modules -p no:warnings
         # Run doctests in documentation
         - py.test docs/ --doctest-glob='*_doctest.rst'
         # Code quality check
